@@ -97,6 +97,7 @@
 * Fixed wrong theta being saved in ToProperties() of distant light
 * Fixed a compilation error in RoughMatte OpenCL code (issue #218)
 * Fixed a problem with Disney material specular tint
+* Fixed a TILEPATH bug causing black renderings
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
